syntax = "proto3";

package spine.testing.client.c;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.testing.client.c";
option java_outer_classname = "CommandsProto";
option java_multiple_files = true;

message CreateTask {

    string id = 1;
}
